--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "evolve-cli",
   "version": "1.0.0",
-  "description": "",
+  "description": "Evolve your old wordpress site to a modern web app without losing a single post.",
   "main": "./bin/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
