--- a/bin/projects.json
+++ b/bin/projects.json
@@ -1,1 +1,1 @@
-[{"name":"Another new project","slug":"another-new-project"},{"name":"asdfsadf","slug":"asdfsadf"}]
+[{"name":"Another new project","slug":"another-new-project"},{"name":"asdfsadf","slug":"asdfsadf"},{"name":"something new","slug":"something-new"}]
