--- a/bin/projects.json
+++ b/bin/projects.json
@@ -1,1 +1,1 @@
-[{"name":"Pretty Please","slug":"pretty-please","container":"pretty_please"}]
+[{"name":"Pretty Please","slug":"pretty-please","container":"pretty_please"},{"name":"Ready","slug":"ready","container":"ready"}]
