--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Kent Chadwick",
-  "license": "ISC",
+  "license": "MIT",
   "bin": {
     "evolve": "./bin/index.js"
   },
